# worldcup-match-vault

./: .gitignore  Anchor.toml  FEEDBACK.md  README.md  TECHNICAL.md  brand.md
.github/workflows/: cron.yml
app/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/src/components/: BetForm.tsx  ClaimPanel.tsx  CreateMarketModal.tsx  Header.tsx  LiveScoreTicker.tsx  MarketCard.tsx  MarketList.tsx  PoolBars.tsx  VerifiableResolution.tsx
app/src/hooks/: useMarkets.ts  useWallet.ts
app/src/idl/: worldcup_match_vault.json
app/src/lib/: anchor.ts  format.ts  (+6 more)
docs/: DEMO_SCRIPT.md  DEPLOY.md  SUBMISSION.md  VIDEO_SCRIPT.html  VIDEO_SCRIPT.md
programs/worldcup-match-vault/: Cargo.toml
programs/worldcup-match-vault/src/: constants.rs  errors.rs  events.rs  instructions.rs  lib.rs  txline_cpi.rs
programs/worldcup-match-vault/src/instructions/: claim_payout.rs  create_market.rs  place_bet.rs  resolve_market.rs  resolve_market_trustless.rs
programs/worldcup-match-vault/src/state/: bet.rs  market.rs
programs/worldcup-match-vault/tests/: vault_litesvm.rs
scripts/: devnet_smoke.ts  retake_watch.sh  settle_watch.sh
tests/: worldcup_vault.ts
txline/: .gitignore  INTEGRATION.md  package-lock.json  package.json  tsconfig.json  txline-llms-full.md  worldcup_match_vault.idl.json
txline/src/: bootstrap-access.ts  config.ts  devnet-trustless-e2e.ts  probe-stuck.ts  probe-validation.ts  proof.ts  seed-demo-markets.ts  seed-knockout.ts  seed-retakes.ts  settle-knockout.ts  txline-client.ts
(+8 files in other folders)
