[package]
name = "worldcup-match-vault"
version = "0.1.0"
description = "Created with Anchor"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "worldcup_match_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "=1.0.2"
# Pin anchor-syn to the 1.0.x line: the 1.0.2 proc-macro crates use syn 1.x,
# but the resolver otherwise pulls anchor-syn 1.1.0 (syn 2.x), which is ABI-
# incompatible and breaks the build. Forcing it here unifies the version.
anchor-syn = "=1.0.2"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-instruction = "3.4.0"
solana-clock = "3"
solana-pubkey = "3.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
